finished implementing Google homepage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 
     <body>
         <header id="header">
-            <h2>Gmail</h2>
-            <h2>Images</h2>
-            <i class="material-icons">apps</i>
-            <button>Sign in</button>
+            <div id="header-links">
+                <a href="#">Gmail</a>
+                <a href="#">Images</a>
+            </div>
+            <div id="app-btn">
+                <div id="app">
+                    <i class="material-icons">apps</i>
+                </div>
+                
+                <button>Sign in</button>
+            </div>
+            
         </header>
         <section id="mid-section">
             <div id="img-div">
@@ -27,7 +35,7 @@
                 <button class="google-buttons">I'm Feeling Lucky</button>                
             </div>
             <div id="offer">
-                <p>Google offered in: </p>
+                Google offered in:
                 <a href="#">Hausa</a>
                 <a href="#">Akan</a>
                 <a href="#">Ewe</a>
